# Dual-Machine-Acceleration

./: CMakeLists.txt  README.md  build_run_linux.sh  build_run_windows.bat
include/: speedup_linux.h  speedup_windows.h
src/: linux_client.cpp  linux_server.cpp  test_linux.cpp  test_windows.cpp  windows_client.cpp  windows_server.cpp
